--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,1 @@
-<!--pages/home/home.wxml-->
-<text class="title">Start learning wechat app, happy</text>
-<button size="mini">按钮</button>
+<view>哈哈</view>
